--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,7 +18,10 @@ h2{
 	color: #cc2b2b;
 	font-family: Georgia,Times,"Times New Roman",serif;
 	text-align: center;
-	padding-bottom: .5em;
+}
+
+p{
+	padding-top: 10px;
 }
 
 /************* untility ***************/
@@ -41,7 +44,7 @@ h2{
 
 figure{
 	margin:0 230px;
-	padding-bottom: 6em;
+	padding-bottom: 4em;
 }
 
 .weekly-fact{
@@ -49,7 +52,7 @@ figure{
 }
 
 figcaption{
-	font-size: 1.5em;
+	font-size: 1.3em;
 	text-align: center;
 	color:#f24130;
 	line-height: 1.3em; 
@@ -58,11 +61,16 @@ figcaption{
 }
 
 .non-fact-p{
-	width: 450px;
+	width: 460px;
 	float: left;
-	font-size: 1.2em;
+	font-size: 1.1em;
 	line-height: 1.2em;
 
+}
+
+.wandering-albatross img{
+	float: left;
+	width: 450px;
 }
 
 .non-fact-i{
@@ -98,4 +106,14 @@ figcaption{
 	padding: 40px;
 	text-align: center;
 	color: #444;
+}
+
+.resources{
+	padding-top: 20px;
+}
+
+.resources a{
+	text-decoration: none;
+	color:#273b64;
+
 }
