--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -103,8 +103,7 @@ figcaption{
 
 /************** footer ******************/
 .footer-container{
-	padding-top: 40px;
-	padding-bottom: 10px;
+	padding: 40px;
 	text-align: center;
 	color: #444;
 }
@@ -117,8 +116,4 @@ figcaption{
 	text-decoration: none;
 	color:#273b64;
 
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> origin/master
