--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,10 +7,13 @@ body{
 
 /************* fonts ******************/
 h1{
-	font-size:3em;
+	font-size:4.5em;
+	text-align: center;
 	color: #273b64;
 	font-family: Georgia,Times,"Times New Roman",serif;
-	padding: 1em 0;
+	position: absolute;
+	top:200px;
+	left: 25%;
 }
 
 h2{
@@ -38,7 +41,14 @@ p{
 .header-container{
 	height: 100px;
 }
-
+header{
+	width: 100%;
+	height: 400px;
+	background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.8)),url("../images/bird.png"), url("../images/horizon1.jpg");
+	background-repeat: no-repeat, no-repeat, no-repeat;
+	background-size:cover, 215px,  cover;
+	background-position:center, 70% 20%, center;/**/
+	background-color: #FFFDE7;
 
 
 /************ weekly fact ***********************/
