--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,7 @@ body{
 	font-family: Tahoma,Verdana,Segoe,sans-serif;
 	background-color: #deeaf8;/* #c5d3da*/
 }
-
+ 
 /************* fonts ******************/
 h1{
 	font-size:4.5em;
@@ -37,10 +37,6 @@ p{
 
 
 /************* header ******************/
-
-.header-container{
-	height: 100px;
-}
 header{
 	width: 100%;
 	height: 400px;
@@ -49,6 +45,12 @@ header{
 	background-size:cover, 215px,  cover;
 	background-position:center, 70% 20%, center;/**/
 	background-color: #FFFDE7;
+}
+.header-container{
+	height: 100px;
+	
+}
+
 
 
 /************ weekly fact ***********************/
@@ -58,8 +60,8 @@ header{
 	margin: 0 auto;
 	background-color: #fff;
 	border-radius: 2px;
-	margin-bottom:40px;
 }
+
 
 figure{
 	margin:0 100px;
@@ -86,7 +88,7 @@ figcaption{
 
 .non-fact-p{
 	width: 460px;
-	float: left;
+	/*float: left;*/
 	font-size: 1.1em;
 	line-height: 1.2em;
 
