--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,27 +1,31 @@
 body{
 	font-size: 16px;
 	line-height: 1.2em;
-	font-family: Tahoma,Verdana,Segoe,sans-serif;
-	background-color: #deeaf8;/* #c5d3da*/
+	font-family: Tahoma,Verdana,Segoe,sans-serif;	
 }
  
 /************* fonts ******************/
 h1{
 	font-size:4.5em;
+	line-height: 1em;
 	text-align: center;
 	color: #273b64;
 	font-family: Georgia,Times,"Times New Roman",serif;
 	position: absolute;
-	top:200px;
+	top:150px;
 	left: 25%;
 }
 
 h2{
-	padding-top: 20px;
+	padding: 20px 0px;
 	font-size: 2.3em;
 	color: #cc2b2b;
 	font-family: Georgia,Times,"Times New Roman",serif;
 	text-align: center;
+}
+
+.htwo h2{
+	padding-top: 10px;
 }
 
 p{
@@ -39,7 +43,7 @@ p{
 /************* header ******************/
 header{
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.8)),url("../images/bird.png"), url("../images/horizon1.jpg");
 	background-repeat: no-repeat, no-repeat, no-repeat;
 	background-size:cover, 215px,  cover;
@@ -57,8 +61,8 @@ header{
 
 .fact{
 	width: 700px;
-	margin: 0 auto;
-	background-color: #fff;
+	margin: 40px auto;
+	background-color: #ECEFF1;
 	border-radius: 2px;
 }
 
@@ -74,21 +78,22 @@ figure img{
 }
 
 .weekly-fact{
-	padding: 1em 0;
+	background-color:#B0BEC5;
+	width: 100%; 
+	padding: 100px 20px;
 }
 
 figcaption{
 	font-size: 1.3em;
 	text-align: center;
-	color:#f24130;
+	color:#cc2b2b;
 	line-height: 1.3em; 
-	padding: 1em;
 	padding-bottom: .5em;
 }
 
 .non-fact-p{
 	width: 460px;
-	/*float: left;*/
+	float: left;
 	font-size: 1.1em;
 	line-height: 1.2em;
 
@@ -112,7 +117,7 @@ figcaption{
 .albatross-information{
 	font-size: 1.2em;
 	line-height: 1.3em;
-	padding-top: 3em;
+	padding: 3em 0;
 }
 
 .true-fact-one{
@@ -128,6 +133,11 @@ figcaption{
 }
 
 /************** footer ******************/
+.footer-background{
+	width: 100%;
+	background-color: #ECEFF1;
+}
+
 .footer-container{
 	padding: 40px;
 	text-align: center;
