--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -153,3 +153,99 @@ figcaption{
 	color:#273b64;
 
 }
+
+/*************** Responsive ***********/
+
+@media(max-width: 600px){
+
+	.header-container, .section-container, .footer-container{
+	width: 100%;
+	margin: 0 auto;
+	}
+
+	h1{
+		font-size: 3em;
+		left: 12%;
+	}
+
+	figure{
+		margin: 0px;
+		padding-bottom: 10%;
+	}
+
+	figure img{
+		width: 100%;
+	}
+
+	.fact{
+		width: 100%;
+		margin: 0px;
+	}
+
+	.non-fact-p{
+		width: 98.4%;
+		float:none;
+
+	}
+
+	.wandering-albatross img{
+		float: none;
+		width: 98.6%;
+		padding-top: 4%;
+		
+	}
+
+	.weekly-fact{
+		background-color:#B0BEC5;
+		width: 98.6%; 
+		padding: 10% 1.6%;
+	}
+
+	h2{
+		line-height:1em;
+		padding: 1.6%;
+	}
+
+	.albatross-information{
+		font-size: 1.2em;
+		line-height: 1.3em;
+		padding: 4%;
+	}
+
+	.true-fact-one, .true-fact-two{
+		width: 98.6%;
+		float: none;
+		padding: 1.6%;
+	}
+	.footer-container{
+		padding: 1.6%;
+		width: 98.6%;
+	
+	}
+
+}
+
+/*@media(max-width: 800px){
+
+	.header-container, .section-container, .footer-container{
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	h1{
+		left:20%;
+	}
+
+
+	.fact{
+		max-width: 800px;
+		margin: 0px;
+	}*/
+
+
+
+
+
+
+
+}
