--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -16,26 +16,12 @@ h1{
 	left: 25%;
 }
 
-/*	h2{
-padding: 20px 0px;
-	font-size: 2.3em;
-	color: #cc2b2b;
-	font-family: Georgia,Times,"Times New Roman",serif;
-	padding-bottom:40px;
-	text-align: center;
-}
-/*
-.htwo h2{
-	padding-top: 10px;
-}
-
-h2
 /************* untility ***************/
 
 h2{
 	color: #cc2b2b;
 }
-.header-container /*.section-container, .footer-container*/{
+.header-container {
 	width: 960px;
 	margin: 0 auto;
 }
@@ -60,22 +46,9 @@ header{
 
 /************ weekly fact ***********************/
 
-/*.fact{
-	width: 700px;
-	margin: 40px auto;
-	background-color: #ECEFF1;
-	border-radius: 2px;
-}*/
 
-
-.fact figure{
-	margin:0 100px;
-	padding-bottom: 4em;
-	
-}
-
-figure img{
-	border-radius: 2px;
+figcaption{
+	padding-bottom: 20px;
 }
 
 .weekly-fact{
@@ -93,53 +66,6 @@ figure img{
 	line-height: 1.3em;
 }
 
-
-
-
-
-.wandering{
-	width: 500px;
-	margin: 0 160px;
-
-}
-
-.wandering figure{
-	width: 500PX;
-	margin: 0 auto;
-	padding-top: 50px;
-}
-
-
-/*
-.wandering-albatross, .wandering-albatross figcaption{
-	margin: 0;
-	padding: 0;
-}
-
-figcaption:nth-of-type(2){
-	float: none;
-	height: auto;
-
-}
-
-/*************** info **************/
-/*.albatross-information{
-	font-size: 1.2em;
-	line-height: 1.3em;
-	padding: 3em 0;
-}*/
-
-.true-fact-one{
-	width: 420px;
-	float: left;
-	padding: 10px;
-}
-
-.true-fact-two{
-	width: 420px;
-	float: right;
-	padding: 10px;
-}
 
 /************** footer ******************/
 .footer-background{
@@ -175,122 +101,26 @@ figcaption:nth-of-type(2){
 		left:20%;
 	}
 
-	.weekly-fact{
-		width: 98.6%; 
-		padding: 5% 1.6%;
-		padding-bottom: 0;
-	}
-
-
-	.fact{
-		max-width: 700px;
-
-	}
-
-	.wandering figure, .wandering figcaption{
-		max-width: 450px;
-	
-	}
-
-	.wandering figcaption{
-		padding-bottom: 50px;
-	}
-
-	.wandering{
-		width: 100%;
-		margin: 0 auto;
-	}
-
-	.wandering figure{
-		width: 500PX;
-		margin: 0 auto;
-		padding-top: 0px;
-	}
-
-	.non-fact-p{
-		width: 70%;
-		margin: 0 auto;
-		float:none;
-
-	}
-
-	.wandering-albatross img{
-		float: none;
-		padding-top: 4%;
-		width: 450px;
-		
-	}
-
-	.true-fact-one, .true-fact-two{
-		width: 94%;
-		float: none;
-		padding: 1.6% 3%;
-	}
-
 
 }
 
 @media(max-width: 730px){
 
-	.wandering figcaption{
-		padding-bottom: 0px;
-	}
 
 	.header-container {
 		width: 100%;
 		margin: 0 auto;
 	}
 
-	.fact{
-		width:100%; 
-	}
-
-	.wandering-albatross img{
-		float: none;
-		width: 450px;
-		padding-top: 4%;
-		
-	}
-
-	.fact figure img{
-		width: 100%;
-		margin: 0 auto;
-	}
-
-
-	h2{
-		line-height:1em;
-		padding: 1.6%;
-	}
-
-	.weekly-fact{
-		width: 98.6%; 
-		padding: 10% 1.6%;
-	}
-
-	.true-fact-one, .true-fact-two{
-		width: 94%;
-		float: none;
-		padding: 1.6% 3%;
-	}
-
-	.footer-container{
-		padding: 1.6%;
-		width: 98.6%;
-	
-	}
 
 
 }
 
 @media(max-width: 520px){
 
-	.wandering figure, .wandering figcaption{
-		width: 100%;
-	
-	}
 
-	.header-container, .section-container, .footer-container{
+
+	.header-container{
 	width: 100%;
 	margin: 0 auto;
 	}
@@ -300,56 +130,7 @@ figcaption:nth-of-type(2){
 		left: 12%;
 	}
 
-	.fact figure{
-		margin: 0px;
-		padding-bottom: 10%;
-	}
 
-	figure img{
-		width: 100%;
-	}
-
-	.fact{
-		width: 100%;
-		margin: 0px;
-	}
-
-	.non-fact-p{
-		width: 98.4%;
-		float:none;
-
-	}
-
-	.wandering-albatross img{
-		float: none;
-		width: 98.6%;
-		margin: 0 auto;
-		padding-top: 4%;
-		
-	}
-
-	.weekly-fact{
-		background-color:#B0BEC5;
-		width: 98.6%; 
-		padding: 10% 1.6%;
-	}
-
-	h2{
-		line-height:1em;
-		padding: 1.6%;
-	}
-
-	.albatross-information{
-		font-size: 1.2em;
-		line-height: 1.3em;
-		padding: 4%;
-	}
-
-	.true-fact-one, .true-fact-two{
-		width: 98.6%;
-		float: none;
-		padding: 1.6%;
-	}
 	.footer-container{
 		padding: 1.6%;
 		width: 98.6%;
