Adding Google maps

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -66,6 +66,10 @@ figcaption{
 	line-height: 1.3em;
 }
 
+#map{
+	width: 540px;
+	height: 380px;
+}
 
 /************** footer ******************/
 .footer-background{
