Update google map

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -52,7 +52,7 @@ figcaption{
 }
 
 .weekly-fact{
-	background-color:#B0BEC5;
+	background-color:#ECEFF1;
 	width: 100%; 
 	padding: 30px 0px;
 	font-size: 18px;
